@@ -1,5 +1,9 @@
 2008-11-08  Luca Bruno  <lethalman88@gmail.com>
 
+	* src/vgl-main-window.c (create_main_menu):
+	Use ui_menu_item_create_from_icon
+	Reorganize Actions menu items
+
 	* src/vgl-tray-icon.c
 	Removed the show_app menu item
 	(ctxt_menu_item_create): renamed in uimisc.c
